# LFM2Sloth

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MLX_PERFORMANCE_METRICS.md  README.md  pyproject.toml  requirements.txt  train.py
docs/: ADVANCED_MATH_TRAINING.md
examples/: build_automotive_dataset.py  build_pdf_dataset.py  experiment_tracking_demo.py  inference_demo.py  quick_start.py  test_apple_silicon.py  test_automotive_assistant.py  test_pdf_assistant.py  test_ultrachat_expert.py  test_yellowstone_expert.py  train_lfm2_mlx.py  train_lfm2_simple.py  train_with_mlx.py
output/lfm2_fused/: README.md
src/lfm2sloth/: __init__.py
src/lfm2sloth/data/: __init__.py  converter.py  processor.py
src/lfm2sloth/deployment/: __init__.py  deployer.py
src/lfm2sloth/evaluation/: __init__.py  inference.py
src/lfm2sloth/mlx/: __init__.py  config.py  data.py  loader.py  trainer.py
src/lfm2sloth/model/: config.py  loader.py
src/lfm2sloth/training/: __init__.py  config.py  trainer.py
src/lfm2sloth/utils/: device.py
src/talkytalky/: __init__.py
src/talkytalky/data/: formats.py
src/talkytalky/evaluation/: evaluator.py  inference.py
src/talkytalky/model/: __init__.py  loader.py
src/talkytalky/training/: tracker.py  trainer.py
